[package]
name = "sheetflow"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "table",
    "dataflow"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tokio = { version = "1", features = ["full"] }
table = { path = "table" }
core = { path = "core" }