[package]
name = "sheetflow"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "dataflow",
    "tableflow-worker",
    "data-client"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tokio = { version = "0", features = ["full"] }
core = { path = "core" }
dataflow = { path = "dataflow" , features = ["coord"]}