[package]
name = "tableflow-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "dataflow",
    "dataflow-worker",
    "data-client",
    "dataflow-test",
    "dataflow-api"
]

[dependencies]
tokio = { version = "0", features = ["full"] }
core = { path = "core" }
dataflow = { path = "dataflow", features = ["coord", "conn"] }
serde_json = "1.0.59"
dataflow-api = { path = "dataflow-api", features = ["all"] }
log = "0.4"

grpcio = "0.10.0"
protobuf = "2.0"
env_logger = "0.9.0"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]
