[package]
name = "dataflow-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dataflow = { path = "../dataflow", features = ["conn"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
dataflow-api = { path = "../dataflow-api", features = ["conn"] }
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
log = "0.4"

grpcio = "0.10.0"
protobuf = "2.0"