[package]
name = "dataflow-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dataflow = { path = "../dataflow", features = ["types"] }

[dev-dependencies]
dataflow = { path = "../dataflow", features = ["worker", "conn"] }
serde_json = "1.0.59"
tokio = { version = "1", features = ["test-util"] }
actix = "0.12"