[package]
name = "dataflow-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "0", features = ["full"] }
dataflow = { path = "../dataflow", features = ["worker"]}
dataflow-api = {path = "../dataflow-api", features = ["worker"]}
log = "0.4"

grpcio = "0.10.0"
protobuf = "2.0"
