[package]
name = "dataflow"
version = "0.1.0"
edition = "2021"
description = "dataflow lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "0", features = ["full"] }
actix-web = "3"
actix = "0.12"
petgraph = "0.6.0"
core = { path = "../core" }
data-client = { path = "../data-client" }
redis = "0.21.5"
log = "0.4"

[features]
worker = ["runtime"]
coord = ["runtime"]
types = []
errors = []
events = ["types"]
conn = ["types", "errors"]
runtime = ["types", "events", "errors", "conn"]