[package]
name = "dataflow"
version = "0.1.0"
edition = "2021"
description = "dataflow lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1", features = ["full"] }
redis = "0.21.5"
actix = "0.12"
common = { path = "../common" }
data-client = { path = "../data-client" }
log = "0.4.16"
grpcio = "0.10.0"
dataflow-api = { path = "../dataflow-api", features = ["worker"] }
chrono = "0.4"
rayon = "1.5"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]

[features]
worker = ["runtime"]
coord = ["runtime"]
conn = ["types", "events", "errors"]
types = []
errors = []
events = []
runtime = ["errors", "datastream"]
datastream = ["types", "events"]

[dev-dependencies]
dataflow = { path = "../dataflow", features = ["worker", "conn"] }
serde_json = "1.0.59"
tokio = { version = "1", features = ["test-util"] }
actix = "0.12"
chrono = "0.4"