[package]
name = "table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3"
tokio = { version = "1", features = ["full"] }
core = { path = "../core" }
serde_json = "1.0.59"
mongodb = "2.1.0"
dataflow = { path = "../dataflow", features = ["types"] }

serde = { version = "1.0", features = ["derive"] }

[features]
full = []