[package]
name = "tableflow-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "0", features = ["full"] }
actix-web = "3"
dataflow = { path = "../dataflow", features = ["worker"]}
