[package]
name = "apiserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
proto = { path = "../proto", features = ["coordinator", "apiserver"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
protobuf = "2.27.1"
grpcio = "0.10.3"
futures = "0.3"