[package]
name = "apiserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
proto = { path = "../proto", features = ["coordinator", "apiserver"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.25"
futures-executor = "0.3"
tonic = "0.8"