[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
regex = "1"
bytes = "1.1.0"
chrono = "0.4"
proto = { path = "../proto", features = ["proto-common", "worker"] }
serde_json = "1.0.59"
grpcio = "0.10.3"
log = "0.4"
protobuf = "2.27.1"
rdkafka = "0.29.0"
futures-executor = "0.3"

[dev-dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["test-util"] }