[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
regex = "1"
bytes = "1.2.1"
chrono = "0.4"
proto = { path = "../proto", features = ["proto-common", "taskmanager", "coordinator"] }
serde_json = "1.0.59"
rdkafka = "0.29.0"
redis = "0.22.1"
futures-executor = "0.3"
futures-util = "0.3"
prost = "0.11"
prost-types = "0.11"
tonic = "0.8"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql" ] }
tracing = "0.1"
rmp-serde = "1.1.1"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]

[dev-dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["test-util", "macros"] }