[package]
name = "connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
proto = { path = "../proto", features = ["conn"] }
common = { path = "../common" }
rdkafka = { version = "0.26", default-features = false }
grpcio = "0.10.3"
protobuf = "2.0"
log = "0.4"