[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
common = { path = "../common" }
proto = { path = "../proto", features = ["coordinator", "worker"] }
serde_json = "1.0.59"

prost = "0.11"
prost-types = "0.11"
tonic = "0.8"
rocksdb = { version = "0.19.0", features=["lz4"] }
tracing = "0.1"
tracing-subscriber = "0.3"