[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
common = { path = "../common" }
proto = { path = "../proto", features = ["coordinator"] }

tonic = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
actix-web = "4"

lightflus-core = { path = "../lightflus-core", features = ["coordinator", "apiserver"] }

