[package]
name = "dataflow-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.10.0"
protobuf = "2.0"
serde = { version = "1.0", features = ["derive"] }

[features]
worker = []
coordinator = []
conn = []
all = ["worker", "coordinator", "conn"]