[package]
name = "lightflus-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
stream = { path = "../stream" }
proto = { path = "../proto", features = ["taskmanager", "coordinator"] }
tonic = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal", "macros"] }
serde_json = "1.0.59"
futures-executor = "0.3"
rayon = "1.5"
tracing = "0.1"
crossbeam-skiplist = "*"
sled = "0.34.7"
mockall = "0.11.3"
mockall_double = "0.3.0"

prost = "0.11"
prost-types = "0.11"

[features]
taskmanager = ["errors"]
coordinator = ["errors"]
errors = []