[package]
name = "lightflus-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
stream = { path = "../stream", optional = true }
proto = { path = "../proto", features = ["taskmanager", "coordinator", "apiserver"] }
tonic = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
serde_json = "1.0.59"
tracing = "0.1"
crossbeam-skiplist = { version = "*", optional = true }
sled = { version = "0.34.7", optional = true }
actix-web = { version = "4", optional = true }
futures-util = { version = "0.3.25", optional = true }

prost = { version = "0.11", optional = true }
prost-types = { version = "0.11", optional = true }

[features]
taskmanager = ["default", "crossbeam-skiplist", "stream"]
coordinator = ["default", "sled", "crossbeam-skiplist", "prost", "prost-types"]
apiserver = ["default", "actix-web", "futures-util"]
errors = []
default = ["errors"]

[dev-dependencies]
lightflus-core = { path = "../lightflus-core", features = ["taskmanager", "coordinator"]}
tracing-subscriber = "0.3"
stream = { path = "../stream", features = ["v8_init"] }