[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.10.0"
protobuf = "3.1.0"

[features]
worker = ["proto-common"]
coordinator = ["proto-common"]
qe = ["proto-common"]
proto-common = []
all = ["worker", "coordinator", "proto-common", "qe"]