[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.10.3"
protobuf = "2.27.1"

[features]
worker = ["proto-common"]
coordinator = ["proto-common"]
storage = ["proto-common"]
apiserver = ["proto-common"]
proto-common = []
all = ["worker", "coordinator", "proto-common", "storage"]