[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1", features = ["sync"] }
futures-executor = "0.3"
tracing = "0.1"

[features]
worker = ["proto-common"]
coordinator = ["proto-common"]
apiserver = ["proto-common"]
proto-common = []
all = ["worker", "coordinator", "proto-common"]

[build-dependencies]
tonic-build = "0.8"