[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "10.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal", "macros"] }
proto = { path = "../proto", features = ["storage"] }
common = { path = "../common" }
log = "0.4"
serde_json = "1.0.59"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
protobuf = "2.27.1"
grpcio = "0.10.3"
