[package]
name = "stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
chrono = "0.4"
tokio = { version = "1", features = ["rt"] }
proto = { path = "../proto", features = ["worker"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
rocksdb = { version = "0.19.0", features=["lz4"] }
v8 = "0.51.0"
protobuf = "2.27.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql" ] }
futures-executor = "0.3"
serde_json = "1.0.59"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
stream = { path = "../stream" }
bytes = "1.2.1"