[package]
name = "stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
chrono = "0.4"
tokio = { version = "1", features = ["rt"] }
proto = { path = "../proto", features = ["taskmanager"] }
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
v8 = "0.51.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" ] }
futures-executor = "0.3"
serde_json = "1.0.59"
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
rayon = "1.5"
tracing = "0.1"
async-trait = "0.1.58"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
stream = { path = "../stream" }
bytes = "1.2.1"