[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
stream = { path = "../stream" }
proto = { path = "../proto", features = ["taskmanager"] }
tonic = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal", "macros"] }
serde_json = "1.0.59"
futures-executor = "0.3"
rayon = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-skiplist = "0.1.1"