[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightflus-core = { path = "../lightflus-core", features = ["taskmanager"] }
serde_json = "1.0.59"
common = { path = "../common" }
stream = { path = "../stream", features = ["v8_init"] }
tonic = "0.8"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
tracing-subscriber = "0.3"