[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
stream = { path = "../stream" }
proto = { path = "../proto", features = ["worker"] }
protobuf = "2.27.1"
grpcio = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "signal"] }
log = "0.4"
serde_json = "1.0.59"
